--- a/05-clima-app/package.json
+++ b/05-clima-app/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.24.0",
     "colors": "^1.4.0",
+    "dotenv": "^10.0.0",
     "inquirer": "^8.2.0"
   }
 }
