--- a/11-ts-restserver/package.json
+++ b/11-ts-restserver/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "sqlite3": "^5.0.2"
   }
 }
