--- a/11-ts-restserver/package.json
+++ b/11-ts-restserver/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
+    "sequelize": "^6.12.5",
     "sqlite3": "^5.0.2"
   }
 }
